Added plugin loader.

--- a/Zomo.ShineBot/Zomo.ShineBot.csproj
+++ b/Zomo.ShineBot/Zomo.ShineBot.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <OutputPath>bin\Debug\</OutputPath>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <OutputPath>bin\Release\</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\Zomo.Core\Zomo.Core.csproj"/>
     </ItemGroup>
