Initial audio working.

--- a/Zomo.ShineBot/Zomo.ShineBot.csproj
+++ b/Zomo.ShineBot/Zomo.ShineBot.csproj
@@ -3,17 +3,18 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
-
+    
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-        <OutputPath>bin\Debug\</OutputPath>
+        <OutputPath>bin\Debug\Plugins</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-        <OutputPath>bin\Release\</OutputPath>
+        <OutputPath>bin\Release\Plugins</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zomo.Core\Zomo.Core.csproj"/>
+        <ProjectReference Include="..\Zomo.Core\Zomo.Core.csproj">
+        </ProjectReference>
     </ItemGroup>
 
 </Project>
